# docs/swagger.json
@@ -843,18 +843,9 @@
       }
     },
     "securityDefinitions": {
-      "petstore_auth": {
-        "type": "oauth2",
-        "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-        "flow": "implicit",
-        "scopes": {
-          "write:pets": "modify pets in your account",
-          "read:pets": "read your pets"
-        }
-      },
-      "api_key": {
+      "apiKey": {
         "type": "apiKey",
-        "name": "api_key",
+        "name": "x-api-key",
         "in": "header"
       }
     },
